Refactored to combine common elements of each demo

--- a/demos/view/index.html
+++ b/demos/view/index.html
@@ -3,51 +3,11 @@
 <head>
     <meta charset=utf-8>
     <!--
-     | Copyright 2018 Esri
-     |
-     | Licensed under the Apache License, Version 2.0 (the "License");
-     | you may not use this file except in compliance with the License.
-     | You may obtain a copy of the License at
-     |
-     |    http://www.apache.org/licenses/LICENSE-2.0
-     |
-     | Unless required by applicable law or agreed to in writing, software
-     | distributed under the License is distributed on an "AS IS" BASIS,
-     | WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     | See the License for the specific language governing permissions and
-     | limitations under the License.
+     | Copyright (c) 2018 Esri
+     | Apache-2.0
     -->
   <title>View solution template</title>
-  <style>
-  html {
-    font-family: Arial;
-  }
-  .section {
-    margin: 8px 0 8px 0;
-    border: 1px solid gray;
-    padding: 8px;
-  }
-  .section-title {
-    font-size: larger;
-    margin-bottom: 12px;
-  }
-  ul {
-    margin: 0;
-    margin-top: 0.25em;
-  }
-  .solutionList {
-    list-style-type: none;
-  }
-  li {
-    margin-top: 0.25em;
-  }
-  a {
-    color: dodgerblue;
-  }
-  a:link {
-    color: dodgerblue;
-  }
-  </style>
+  <link rel="stylesheet" type="text/css" href="../demo_common/common.css">
 </head>
 <body>
   <h3>View solution template</h3>
@@ -55,7 +15,7 @@
 
     <div class="section">
       <div class="section-title">Available Solutions</div>
-      <img id="fetchingSolutions" src="loading.gif"/>
+      <img id="fetchingSolutions" src="../demo_common/images/loading.gif"/>
       <div id="solutionsResults" style="display:none">
         <div id="solutionsDisplay"></div>
       </div>
@@ -63,7 +23,7 @@
 
     <div id="display" class="section" style="display:none">
       <div class="section-title">Solution details</div>
-      <img id="fetchingDetails" src="loading.gif"/>
+      <img id="fetchingDetails" src="../demo_common/images/loading.gif"/>
       <div id="detailsResults" style="display:none">
         <div id="detailsDisplay"></div>
       </div>
@@ -71,17 +31,27 @@
 
   </div>
 
-  <script src="require_2.3.6.min.js"></script>
+  <script src="../demo_common/require_2.3.6.min.js"></script>
   <script>
   var showSolutionFcn = null;
 
+  /**
+   * Shows the currently-selected solution.
+   * @param event Radio-button click event
+   */
   function onRadioClicked(event) {
-    showSolutionFcn(event.value);
+    // Show the hierarchy of the selected solution
+    var currentSolutionParts = event.value.split('|');
+    currentSolutionId = currentSolutionParts[0];
+    showSolutionFcn(currentSolutionId);
   }
 
   requirejs.config({
     baseUrl: './',
-    paths: {  // for the benefit of called libraries
+    paths: {
+      // for the benefit of arcgis-clone-js
+      'tslib': '../demo_common/tslib',
+      // for the benefit of called libraries that use arcgis-rest-auth
       '@esri/arcgis-rest-auth': 'https://unpkg.com/@esri/arcgis-rest-auth@1.11.1/dist/umd/auth.umd',
       '@esri/arcgis-rest-feature-service-admin':
         'https://unpkg.com/@esri/arcgis-rest-feature-service-admin@1.11.1/dist/umd/feature-service-admin.umd',
@@ -92,115 +62,20 @@
     }
   });
   requirejs([
-    '../../dist/src/index',
+    '../demo_common/common',
     '@esri/arcgis-rest-items'
   ], function (
-    clone,
+    demoCommon,
     items
   ) {
-    showSolutionFcn = showSolution;
+    showSolutionFcn = demoCommon.showPublishedSolutionHierarchy.bind(demoCommon);
 
     document.getElementById('page').style.display = 'block';
 
-    // Fetch solutions
-    items.searchItems('type:Solution owner:ArcGISTeamLocalGovOrg')
-    .then(
-      function (foundItems) {
-        if (foundItems.total === 0) {
-          document.getElementById('solutionsDisplay').innerHTML = 'No Solution items found';
-        } else {
-          var itemsDisplay = '';
-          foundItems.results.forEach(function (item) {
-            itemsDisplay += '<input type="radio" onclick="onRadioClicked(this)" name="solutions" value="' +
-              item.id + '">' + item.title + '</input><br>';
-          });
-          document.getElementById('solutionsDisplay').innerHTML = itemsDisplay;
-        }
-      },
-      function (error) {
-        document.getElementById('solutionsDisplay').innerHTML = error.toString();
-      }
-    )
-    .finally(function () {
-      document.getElementById('fetchingSolutions').style.display = 'none';
-      document.getElementById('solutionsResults').style.display = 'block';
-    });
+    // Fetch and list solutions
+    demoCommon.showAvailableSolutions();
 
     //----------------------------------------------------------------------------------------------------------------//
-
-    function showSolution(publishedSolutionId) {
-      document.getElementById('display').style.display = 'block';
-      document.getElementById('fetchingDetails').style.display = 'block';
-      document.getElementById('detailsResults').style.display = 'none';
-
-      items.getItemData(publishedSolutionId)
-      .then(
-        publishedSolution => {
-          document.getElementById('detailsDisplay').innerHTML =
-            createItemLinksDisplay(publishedSolutionId,
-              'http://arcgis4localgov2.maps.arcgis.com/home/', 'https://www.arcgis.com/') +
-            '<br>Published Solution item hierarchy:' +
-            createHierarchyDisplay(publishedSolution.items, clone.Solution.getItemHierarchy(publishedSolution.items));
-        }
-      )
-      .finally(function () {
-        document.getElementById('fetchingDetails').style.display = 'none';
-        document.getElementById('detailsResults').style.display = 'block';
-      });
-    }
-
-    //----------------------------------------------------------------------------------------------------------------//
-
-    function createHierarchyDisplay(solutionItems, hierarchy, createLinks, orgUrl) {
-      // Show solution contents as they'd be in the solution's AGOL item
-      var icons = {
-        'Dashboard': 'images/dashboard16.svg',
-        'Feature Service': 'images/features16.svg',
-        'Group': 'images/group.svg',
-        'Web Map': 'images/maps16.svg',
-        'Web Mapping Application': 'images/apps16.svg'
-      };
-
-      var display = '<ul class="solutionList">';
-      hierarchy.forEach(function (item) {
-        var itemSection = solutionItems[item.id].itemSection;
-        var itemLabel = (itemSection.title || itemSection.name || item.type);
-        if (item.type === 'Feature Service') {
-          itemLabel += ' (' + item.idPart + ')';
-        }
-
-        var webpage = item.type === 'Group' ? 'group' : 'item';
-        display += '<li><img class="item-type-icon margin-right-quarter" src="' + icons[item.type] +
-          '" width="16" height="16" alt="">&nbsp;&nbsp;';
-        if (createLinks) {
-          display += '<a href="' + orgUrl + webpage + '.html?id=' + item.id + '" target="_blank">' +
-            itemLabel + '</a>';
-        } else {
-          display += itemLabel;
-        }
-
-        if (Array.isArray(item.dependencies) && item.dependencies.length > 0) {
-          display += createHierarchyDisplay(solutionItems, item.dependencies, createLinks, orgUrl);
-        }
-
-        display += '</li>';
-      });
-      display += '</ul>';
-      return display;
-    }
-
-    function createItemLinksDisplay(publishedId, orgUrl, portalUrl) {
-      var display = '<ul>';
-      display += '<li><a href="' + orgUrl + 'item.html?id=' + publishedId +
-        '" target="_blank">Item</a></li>';
-      display += '<li><a href="' + portalUrl + 'sharing/content/items/' + publishedId +
-        '?f=json" target="_blank">Item JSON</a></li>';
-      display += '<li><a href="' + portalUrl + 'sharing/content/items/' + publishedId +
-        '/data?f=json" target="_blank">Data JSON</a></li>';
-      display += '</ul>';
-
-      return display;
-    }
 
   });
   </script>
