Added findIndex polyfill to demos

--- a/demos/view/index.html
+++ b/demos/view/index.html
@@ -74,6 +74,7 @@
   });
   requirejs([
     '../demo_common/common',
+    '../demo_common/polyfills',
     '@esri/arcgis-rest-items'
   ], function (
     demoCommon,
