Moved feature service service, layers, and tables to properties object

--- a/demos/view/index.html
+++ b/demos/view/index.html
@@ -74,8 +74,8 @@
   });
   requirejs([
     '../demo_common/common',
-    '../demo_common/polyfills',
-    '@esri/arcgis-rest-items'
+    '@esri/arcgis-rest-items',
+    '../demo_common/polyfills'
   ], function (
     demoCommon,
     items
