Brought in adlib from CDN

--- a/demos/view/index.html
+++ b/demos/view/index.html
@@ -62,6 +62,7 @@
     paths: {
       // for the benefit of arcgis-clone-js
       'tslib': '../demo_common/tslib',
+      'adlib': 'https://unpkg.com/adlib@3.0.0/dist/adlib.umd',
       // for the benefit of called libraries that use arcgis-rest-auth
       '@esri/arcgis-rest-auth': 'https://unpkg.com/@esri/arcgis-rest-auth@1.14.3/dist/umd/auth.umd',
       '@esri/arcgis-rest-feature-service-admin':
