Switched to importing webpacks

--- a/demos/view/index.html
+++ b/demos/view/index.html
@@ -43,6 +43,11 @@
   </div>
 
   <script src="../demo_common/require_2.3.6.min.js"></script>
+  <script src="../../dist/adlib.js"></script>
+  <script src="../../dist/arcgis-clone-js.js"></script>
+  <script src="../../dist/arcgis-rest-auth.js"></script>
+  <script src="../../dist/arcgis-rest-groups.js"></script>
+  <script src="../../dist/arcgis-rest-items.js"></script>
   <script>
   var showSolutionFcn = null;
 
@@ -57,29 +62,11 @@
     showSolutionFcn(currentSolutionId);
   }
 
-  requirejs.config({
-    baseUrl: './',
-    paths: {
-      // for the benefit of arcgis-clone-js
-      'tslib': '../demo_common/tslib',
-      'adlib': 'https://unpkg.com/adlib@3.0.0/dist/adlib.umd',
-      // for the benefit of called libraries that use arcgis-rest-auth
-      '@esri/arcgis-rest-auth': 'https://unpkg.com/@esri/arcgis-rest-auth@1.14.3/dist/umd/auth.umd',
-      '@esri/arcgis-rest-feature-service-admin':
-        'https://unpkg.com/@esri/arcgis-rest-feature-service-admin@1.14.3/dist/umd/feature-service-admin.umd',
-      '@esri/arcgis-rest-groups': 'https://unpkg.com/@esri/arcgis-rest-groups@1.14.3/dist/umd/groups.umd',
-      '@esri/arcgis-rest-items': 'https://unpkg.com/@esri/arcgis-rest-items@1.14.3/dist/umd/items.umd',
-      '@esri/arcgis-rest-request': 'https://unpkg.com/@esri/arcgis-rest-request@1.14.3/dist/umd/request.umd',
-      '@esri/arcgis-rest-sharing': 'https://unpkg.com/@esri/arcgis-rest-sharing@1.14.3/dist/umd/sharing.umd'
-    }
-  });
   requirejs([
     '../demo_common/common',
-    '@esri/arcgis-rest-items',
     '../demo_common/polyfills'
   ], function (
-    demoCommon,
-    items
+    demoCommon
   ) {
     showSolutionFcn = demoCommon.showPublishedSolutionHierarchy.bind(demoCommon);
 
