Separated library from demos

--- a/demos/view/index.html
+++ b/demos/view/index.html
@@ -43,11 +43,11 @@
   </div>
 
   <script src="../demo_common/require_2.3.6.min.js"></script>
-  <script src="../../dist/adlib.js"></script>
-  <script src="../../dist/arcgis-clone-js.js"></script>
-  <script src="../../dist/arcgis-rest-auth.js"></script>
-  <script src="../../dist/arcgis-rest-groups.js"></script>
-  <script src="../../dist/arcgis-rest-items.js"></script>
+  <script src="../lib/adlib.js"></script>
+  <script src="../lib/arcgis-clone-js.js"></script>
+  <script src="../lib/arcgis-rest-auth.js"></script>
+  <script src="../lib/arcgis-rest-groups.js"></script>
+  <script src="../lib/arcgis-rest-items.js"></script>
   <script>
   var showSolutionFcn = null;
 
