Switched to CDN for arcgis-rest-js

--- a/demos/view/index.html
+++ b/demos/view/index.html
@@ -42,11 +42,12 @@
 
   </div>
 
-  <script src="../lib/require_2.3.6.min.js"></script>
-  <script src="../lib/arcgis-rest-auth.js"></script>
-  <script src="../lib/arcgis-rest-items.js"></script>
-  <script src="../lib/arcgis-rest-request.js"></script>
+  <script src="https://cdn.polyfill.io/v2/polyfill.js?features=es5,Promise,fetch"></script>
+  <script src="https://unpkg.com/@esri/arcgis-rest-auth@1.16.1/dist/umd/auth.umd.js"></script>
+  <script src="https://unpkg.com/@esri/arcgis-rest-items@1.16.1/dist/umd/items.umd.js"></script>
+  <script src="https://unpkg.com/@esri/arcgis-rest-request@1.16.1/dist/umd/request.umd.js"></script>
   <script src="../lib/arcgis-clone-js.js"></script>
+  <script src="../lib/require_2.3.6.min.js"></script>
   <script>
   var showSolutionFcn = null;
 
