--- a/demos/view/index.html
+++ b/demos/view/index.html
@@ -44,6 +44,13 @@
 
   <script src="https://cdn.polyfill.io/v2/polyfill.js?features=es5,Promise,fetch"></script>
   <script src="../lib/require_2.3.6.min.js"></script>
+  <script src="node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd.js"></script>
+  <script src="node_modules/@esri/arcgis-rest-feature-service-admin/dist/umd/feature-service-admin.umd.js"></script>
+  <script src="node_modules/@esri/arcgis-rest-groups/dist/umd/groups.umd.js"></script>
+  <script src="node_modules/@esri/arcgis-rest-items/dist/umd/items.umd.js"></script>
+  <script src="node_modules/@esri/arcgis-rest-request/dist/umd/request.umd.js"></script>
+  <script src="node_modules/@esri/arcgis-rest-sharing/dist/umd/sharing.umd.js"></script>
+  <script src="node_modules/@esri/solution-creator/dist/umd/creator.umd.js"></script>
   <script>
   var showSolutionFcn = null;
 
@@ -59,16 +66,7 @@
   }
 
   requirejs.config({
-    baseUrl: './',
-    paths: {  // for the benefit of called libraries
-      '@esri/arcgis-rest-auth': 'https://unpkg.com/@esri/arcgis-rest-auth@1.17.0/dist/umd/auth.umd',
-      '@esri/arcgis-rest-feature-service-admin':
-        'https://unpkg.com/@esri/arcgis-rest-feature-service-admin@1.17.0/dist/umd/feature-service-admin.umd',
-      '@esri/arcgis-rest-groups': 'https://unpkg.com/@esri/arcgis-rest-groups@1.17.0/dist/umd/groups.umd',
-      '@esri/arcgis-rest-items': 'https://unpkg.com/@esri/arcgis-rest-items@1.17.0/dist/umd/items.umd',
-      '@esri/arcgis-rest-request': 'https://unpkg.com/@esri/arcgis-rest-request@1.17.0/dist/umd/request.umd',
-      '@esri/arcgis-rest-sharing': 'https://unpkg.com/@esri/arcgis-rest-sharing@1.17.0/dist/umd/sharing.umd'
-    }
+    baseUrl: './'
   });
 
   requirejs([
