--- a/demos/view/index.html
+++ b/demos/view/index.html
@@ -44,14 +44,10 @@
 
   <script src="https://cdn.polyfill.io/v2/polyfill.js?features=es5,Promise,fetch"></script>
   <script src="../lib/require_2.3.6.min.js"></script>
-  <script src="node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd.js"></script>
-  <script src="node_modules/@esri/arcgis-rest-feature-service-admin/dist/umd/feature-service-admin.umd.js"></script>
-  <script src="node_modules/@esri/arcgis-rest-groups/dist/umd/groups.umd.js"></script>
-  <script src="node_modules/@esri/arcgis-rest-items/dist/umd/items.umd.js"></script>
-  <script src="node_modules/@esri/arcgis-rest-request/dist/umd/request.umd.js"></script>
-  <script src="node_modules/@esri/arcgis-rest-sharing/dist/umd/sharing.umd.js"></script>
-  <script src="node_modules/@esri/solution-creator/dist/umd/creator.umd.js"></script>
+  <!-- <script src="node_modules/@esri/solution-creator/dist/umd/creator.umd.js"></script> -->
   <script>
+  // if you load any solution-* package as a script tag, its methods will hang off the 'arcgisSolution' global
+  
   var showSolutionFcn = null;
 
   /**
@@ -66,7 +62,17 @@
   }
 
   requirejs.config({
-    baseUrl: './'
+    baseUrl: './',
+    paths: {  // for the benefit of called libraries
+      '@esri/arcgis-rest-auth': '../demo_common/node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd',
+      '@esri/arcgis-rest-feature-service-admin':
+        '../demo_common/node_modules/@esri/arcgis-rest-feature-service-admin/dist/umd/feature-service-admin.umd',
+      '@esri/arcgis-rest-groups': '../demo_common/node_modules/@esri/arcgis-rest-groups/dist/umd/groups.umd',
+      '@esri/arcgis-rest-items': '../demo_common/node_modules/@esri/arcgis-rest-items/dist/umd/items.umd',
+      '@esri/arcgis-rest-request': '../demo_common/node_modules/@esri/arcgis-rest-request/dist/umd/request.umd',
+      '@esri/arcgis-rest-sharing': '../demo_common/node_modules/@esri/arcgis-rest-sharing/dist/umd/sharing.umd',
+      '@esri/solution-creator': '../demo_common/node_modules/@esri/solution-creator/dist/umd/creator.umd'
+    }
   });
 
   requirejs([
